# html_homework1

./: README.md  index.html  main.py  pyproject.toml
